2006-10-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/tools-install.dox: Update documentation for GCC 4.x,
	add hint for binutils and GCC "new device" patches, add
	--prefix to avr-libc configure command, remove UISP, minor
	addition to avrdude section.
	Closes bug #17551: Update documentation to point to issues with gcc4.1

2006-09-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bjoern Haase:
	* libm/fplib/fp_split.S: Pop 3 bytes from stack on error returns
	rather than 2 for avr6 architectures.
	Closes bug #17591: /avr-libc/libm/fplib/fp_split.S error return
	will fail for 3-Byte PC devices

2006-09-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* AvrCommon.am (AVRLIB_CFLAGS): Use -gstabs rather than -g here as
	well, as it's already been in AVRLIB_ASFLAGS.  Without that, using
	a compiler that defaults to DWARF-2 yielded an interesting mix of
	both, DWARF-2 and stabs debugging information in the library.

2006-09-27 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h (ISR_ALIAS): Add ISR_ALIAS() macro.
	Fix doxygen style for the other ISR macros.
	Closes bug #17608: Add ISR_ALIAS() to avr/interrupt.h

2006-09-20 Eric B. Weddington <eweddington@cso.atmel.com>

	* configure.ac (CHECK_PNG_UTILS): Fix string echo for checking pnmtopng. 
	Fix check for pngtopnm and pnmtopng programs. Add self to authors.
	* doc/api/doxygen.config.in (IMAGE_PATH): Add correct directories.
	* doc/api/doxygen.config.in (LATEX_BATCHMODE): Change to yes so latex will
	run in a batch mode and not query the user if something is amiss.
	* doc/api/tools-install.dox: Remove doxygen warning.
	* doc/examples/asmdemo/asmdemo.dox: Ditto.
	* doc/api/Makefile.am (fix_png): Use the actual RGB numbers instead of
	the color name in case the rgb.txt file cannot be found.
	* doc/api/Makefile.am (doxygen.confg): Remove the dependency on 
	$(top_srcdir)/stamp-h1 as there is no rule in this Makefile to build it, 