@@ -1,3 +1,9 @@
+2006-10-08 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/compat/deprecated.h: Fix argument order for outp(), add
+	inb() and outb().
+	Closes bug #16868: depricated.h: outp() arguments order misprint
+
 2006-10-07 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* doc/api/tools-install.dox: Update documentation for GCC 4.x,
